--- a/01_materials/lec_live_code_03-04-25.ipynb
+++ b/01_materials/lec_live_code_03-04-25.ipynb
@@ -6,7 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lec_live_code_03-04-25\n"
+    "#lec_live_code_03-04-25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as mcolors\n",
+    "from mpl_toolkits import mplot3d"
    ]
   }
  ],
